# rbipl

./: CMakeLists.txt  RBIPLConfig.cmake.in  RBIPLConfigVersion.cmake.in
src/: CMakeLists.txt  baseparameters.hpp  baseparameters_gautiernumerical.cpp  baseparameters_gautiernumerical.hpp  chainidsolver_floating_base.hpp  chainidsolver_recursive_newton_euler_floating_base.cpp  chainidsolver_recursive_newton_euler_floating_base.hpp  chaininertialparameters.cpp  chaininertialparameters.hpp  parametersregressor.hpp  tree_rotation.cpp  tree_rotation.hpp  treeidsolver.hpp  treeidsolver_recursive_newton_euler.cpp  treeidsolver_recursive_newton_euler.hpp  treeinertialparameters.cpp  treeinertialparameters.hpp  treeserialization.cpp  treeserialization.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_chaininertialparameters.cpp  test_kdl.cpp  test_netwrenchregressor.cpp  test_treeinertialparameters.cpp
